--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,44 @@
 <div class="fondo">
-    <p>Hola {{emailUsuario}}</p>
-
-    <button (click)="cerrarSesion()">Cerrar sesion</button>
+  <div class="contenedor-juegos">
+    <div class="tarjeta-juego">
+      <img
+        src="ruta-del-juego.png"
+        alt="Nombre del juego"
+        class="imagen-juego"
+      />
+      <h3 class="titulo-juego">Ahorcado</h3>
+      <p class="descripcion-juego">Juego clásico de adivinanza por letras.</p>
+      <button class="btn-jugar">Jugar</button>
+    </div>
+    <div class="tarjeta-juego">
+      <img
+        src="ruta-del-juego.png"
+        alt="Nombre del juego"
+        class="imagen-juego"
+      />
+      <h3 class="titulo-juego">Ahorcado</h3>
+      <p class="descripcion-juego">Juego clásico de adivinanza por letras.</p>
+      <button class="btn-jugar">Jugar</button>
+    </div>
+    <div class="tarjeta-juego">
+      <img
+        src="ruta-del-juego.png"
+        alt="Nombre del juego"
+        class="imagen-juego"
+      />
+      <h3 class="titulo-juego">Ahorcado</h3>
+      <p class="descripcion-juego">Juego clásico de adivinanza por letras.</p>
+      <button class="btn-jugar">Jugar</button>
+    </div>
+    <div class="tarjeta-juego">
+      <img
+        src="ruta-del-juego.png"
+        alt="Nombre del juego"
+        class="imagen-juego"
+      />
+      <h3 class="titulo-juego">Ahorcado</h3>
+      <p class="descripcion-juego">Juego clásico de adivinanza por letras.</p>
+      <button class="btn-jugar">Jugar</button>
+    </div>
+  </div>
 </div>
