--- a/src/app/pages/quien-soy/quien-soy.component.html
+++ b/src/app/pages/quien-soy/quien-soy.component.html
@@ -1,1 +1,20 @@
-<p>quien-soy works!</p>
+<div class="fondo">
+  <div class="form">
+    <div class="quien-soy">
+      <div class="perfil tarjeta">
+        <img src="{{foto}}" class="foto" />
+        <div class="info">
+          <h1>Thiago Gonzalez Castello</h1>
+          <h2>Usuario GitHub: thiagogcastello</h2>
+        </div>
+        <p class="descripcion">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt itaque quidem...
+        </p>
+      </div>
+
+      <div class="extra tarjeta">
+       
+      </div>
+    </div>
+  </div>
+</div>
