--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,47 +1,57 @@
 <div class="fondo">
   <div class="form">
-    <div class="titulo-juegos">
-      SALA DE JUEGOS
-    </div>
-    <form class="login-form">
-      <input type="email" 
+    <div class="titulo-juegos">SALA DE JUEGOS</div>
+
+    <form class="register-form">
+      <input 
+        type="email" 
         placeholder="Email" 
-        [(ngModel)]="email"
-        name="email"
-        required/>
+        [(ngModel)]="email" 
+        name="email" 
+        required />
 
-      <input type="text" 
+      <input 
+        type="text" 
         placeholder="Nombre" 
-        [(ngModel)]="nombre"
-        name="nombre"
-        required/>
+        [(ngModel)]="nombre" 
+        name="nombre" 
+        required />
 
-      <input type="text" 
+      <input 
+        type="text" 
         placeholder="Apellido" 
-        [(ngModel)]="apellido"
-        name="apellido"
-        required/>
+        [(ngModel)]="apellido" 
+        name="apellido" 
+        required />
 
-      <input type="number" 
+      <input 
+        type="number" 
         placeholder="Edad" 
-        [(ngModel)]="edad"
-        name="edad"
-        required/>
+        [(ngModel)]="edad" 
+        name="edad" 
+        required />
 
-      <input type="password" 
-        placeholder="Password" 
-        [(ngModel)]="password"
-        name="password"
-        required/>
-      
-      <button type="button" (click)="registrarse()">Registrarse</button>
+      <input 
+        type="password" 
+        placeholder="Contraseña" 
+        [(ngModel)]="password" 
+        name="password" 
+        required />
+
+      <button 
+        type="button" 
+        class="btn-principal" 
+        (click)="registrarse()"
+      >
+        Registrarse
+      </button>
     </form>
 
-    <div class="text-center mt-6">
-      <p class="text-gray-600">¿Ya estás registrado?</p>
-      <button
-        (click)="irAlInicioSesion()"
-        class="text-purple-500 hover:underline mt-2"
+    <div class="registro-link">
+      <p>¿Ya estás registrado?</p>
+      <button 
+        (click)="irAlInicioSesion()" 
+        class="registro-boton"
       >
         Logueate acá
       </button>
