--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+.fondo {
+  background: linear-gradient(147deg, #fbff22 10%, #991cff 80%);
+  min-height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
