--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,32 +1,30 @@
-
 .navbar {
-    background-color: #000;
-    padding: 1rem;
-    border-bottom: rgb(116, 46, 149) 
-  }
-  
-  .navbar-nav {
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-    width: 100%;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .nav-item .nav-link {
-    color: white;
-    font-weight: bold;
-    text-decoration: none;
-    font-size: 1.1rem;
-    transition: background-color 0.3s, color 0.3s;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-  }
-  
-  .nav-item .nav-link:hover {
-    background: rgb(116, 46, 149);
-    color: white;
-  }
-  
+  background-color: #000;
+  padding: 1rem;
+  border-bottom: rgb(116, 46, 149);
+}
+
+.navbar-nav {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  width: 100%;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-item .nav-link {
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 1.1rem;
+  transition: background-color 0.3s, color 0.3s;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+}
+
+.nav-item .nav-link:hover {
+  background: rgb(116, 46, 149);
+  color: white;
+}
