--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,39 @@
-<nav class="navbar navbar-expand-lg ">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       @if (auth.usuarioActual !== null) {
-        <li class="nav-item">
-          <a class="nav-link" routerLink="">Home</a>
-        </li>
-      }@else {
-        <li class="nav-item">
-          <a class="nav-link" routerLink="login">Iniciar Sesion</a>
-        </li>
-      }
+      <li class="nav-item">
+        <a class="nav-link" routerLink="">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="chat">Chat</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="quiensoy">Quien Soy</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="auth.cerrarSesion()">Cerrar Sesion</a>
+      </li>
+      }@else {
+      <li class="nav-item">
+        <a class="nav-link" routerLink="login">Iniciar Sesion</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="quiensoy">Quien Soy</a>
+      </li>
+      }
+      
     </ul>
   </div>
 </nav>
