--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,9 +1,64 @@
+.tarjeta-juego {
+  background: white;
+  border-radius: 25px;
+  padding: 20px;
+  width: 350px;
+  height: 550px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+  transition: transform 0.3s ease;
+}
 
-.fondo {
-    background-image: linear-gradient(147deg, #fbff22 10%, #991cff 80%);
-    min-height: 90vh;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    padding: 120px;
+.contenedor-juegos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  padding: 20px;
+}
+
+.tarjeta-juego:hover {
+  transform: translateY(-5px);
+}
+
+.imagen-juego {
+  width: 100%;
+  height: 330px;
+  object-fit: cover;
+  border: 2px solid #000;
+  border-radius: 10px;
+}
+
+.descripcion-juego {
+  text-align: center;
+  margin: 5px 0 10px 0;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-jugar {
+  background-color: #6a0dad;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 12px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.2s ease;
+}
+
+.btn-jugar:hover {
+  background-color: #5900b3;
+}
+
+.titulo-juego {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin: 10px 0 5px 0;
+  text-align: center;
 }
