--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -34,7 +34,7 @@
 
     <div class="registro-link">
       <p>¿Todavía no estás registrado?</p>
-      <button (click)="irAlRegistro()" class="registro-boton">Regístrate acá</button>
+      <button [routerLink]="['/registro']" class="registro-boton">Regístrate acá</button>
     </div>
   </div>
 </div>
