--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -62,3 +62,11 @@
   margin: 10px 0 5px 0;
   text-align: center;
 }
+
+.imagen-juego-bg {
+  width: 100%;
+  height: 330px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 8px;
+}
