--- a/src/app/pages/juegos/juegos.component.html
+++ b/src/app/pages/juegos/juegos.component.html
@@ -12,28 +12,19 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      @if (auth.usuarioActual !== null) {
       <li class="nav-item">
-        <a class="nav-link" routerLink="">Home</a>
+        <a class="nav-link" routerLink="./preguntados">Preguntados</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="chat">Chat</a>
+        <a class="nav-link" routerLink="./mayor-menor">Mayor Menor</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="quiensoy">Quien Soy</a>
+        <a class="nav-link" routerLink="./ahorcado">Ahorcado</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="auth.cerrarSesion()">Cerrar Sesion</a>
+        <a class="nav-link" routerLink="reaccion">Juego de reaccion</a>
       </li>
-      }@else {
-      <li class="nav-item">
-        <a class="nav-link" routerLink="login">Iniciar Sesion</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="quiensoy">Quien Soy</a>
-      </li>
-      }
     </ul>
   </div>
 </nav>
-<router-outlet />
+<router-outlet></router-outlet>
