--- a/src/app/pages/mayor-menor/mayor-menor.component.css
+++ b/src/app/pages/mayor-menor/mayor-menor.component.css
@@ -128,7 +128,7 @@ body {
   font-size: 1.2rem;
   border: none;
   border-radius: 10px;
-  background-color: #9333ea;
+  background-color: #8b5cf6;
   color: white;
   font-weight: 600;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -137,7 +137,7 @@ body {
 }
 
 .botones button:hover {
-  background-color: #7e22ce;
+  background-color: #8b5cf6;
   transform: translateY(-2px);
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
 }
@@ -173,7 +173,7 @@ body {
   font-size: 1.2rem;
   border: none;
   border-radius: 10px;
-  background-color: #16a34a;
+  background-color: #8b5cf6;
   color: white;
   font-weight: 600;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -182,7 +182,7 @@ body {
 }
 
 .reiniciar:hover {
-  background-color: #15803d;
+  background-color: #8b5cf6;
   transform: translateY(-2px);
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
 }
