--- a/src/app/pages/preguntados/preguntados.component.css
+++ b/src/app/pages/preguntados/preguntados.component.css
@@ -1,9 +1,112 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
+
+body {
+  margin: 0;
+  font-family: "Inter", sans-serif;
+  background: linear-gradient(to bottom right, #fcd34d, #a855f7);
+}
+
 .fondo {
-    background: linear-gradient(to bottom right, #fcd34d, #a855f7);
-    height: calc(100vh - 149px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    box-sizing: border-box;
-  }
+  background: linear-gradient(to bottom right, #fcd34d, #a855f7);
+  height: calc(100vh - 149px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.contenedor {
+  background-color: white;
+  border-radius: 16px;
+  padding: 2.5rem;
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  max-width: 80vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pregunta {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #6b21a8;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.opciones {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+
+.opciones button {
+  background-color: #8b5cf6;
+  color: white;
+  border: none;
+  border-radius: 12px;
+  padding: 14px 22px;
+  width: 100%;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s, box-shadow 0.2s;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.opciones button:hover {
+  background-color: #7c3aed;
+  transform: scale(1.03);
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+}
+
+.opciones button.correcta {
+  background-color: #22c55e !important;
+}
+
+.opciones button.incorrecta {
+  background-color: #ef4444 !important;
+}
+
+.botones-juego {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 20px;
+}
+
+.siguiente {
+  padding: 10px 20px;
+  font-size: 1rem;
+  background-color: #8b5cf6;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.siguiente:hover {
+  background-color: #8b5cf6;
+}
+
+.siguiente:hover {
+  background-color: #7c3aed;
+  transform: translateY(-2px);
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+}
+.informacion {
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: #333;
+  text-align: center;
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  width: 100%;
+  flex-wrap: nowrap;
+}
