tabla de puntajes

--- a/src/app/pages/ahorcado/ahorcado.component.html
+++ b/src/app/pages/ahorcado/ahorcado.component.html
@@ -26,6 +26,7 @@
 
     <div class="status-container">
       <p>Errores: {{ errores }} / 6</p>
+      <p>Puntuacion: {{ puntuacion }}</p>
     </div>
 
     <div class="mt-4">
