--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,9 @@
         <a class="nav-link" routerLink="quiensoy">Quien Soy</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="puntajes">Tabla de puntuaciones</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" (click)="auth.cerrarSesion()">Cerrar Sesion</a>
       </li>
       }@else {
