--- a/src/app/pages/quien-soy/quien-soy.component.html
+++ b/src/app/pages/quien-soy/quien-soy.component.html
@@ -2,18 +2,32 @@
   <div class="form">
     <div class="quien-soy">
       <div class="perfil tarjeta">
-        <img src="{{foto}}" class="foto" />
+        <img src="{{ foto }}" class="foto" />
         <div class="info">
           <h1>Thiago Gonzalez Castello</h1>
           <h2>Usuario GitHub: thiagogcastello</h2>
         </div>
         <p class="descripcion">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt itaque quidem...
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt itaque
+          quidem...
         </p>
       </div>
 
       <div class="extra tarjeta">
-       
+        <img
+          src="assets/img/reaccion.png"
+          alt="Test de reaccion"
+          class="juego-img"
+        />
+        <div class="descripcion-juego">
+          <h3>Test de reaccion</h3>
+          <p>
+            Simula una largada de F1 y pone a prueba tus reflejos.
+          </p>
+        </div>
+        <div class="boton-juego">
+          <button>Jugar!</button>
+        </div>
       </div>
     </div>
   </div>
